Fri Oct  9 23:59:25 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/testing/svcs/validation/TE_Score.mpc:
        * cuts/utils/testing/svcs/validation/TE_Score_App.h:
        * cuts/utils/testing/svcs/validation/TE_Score_App.cpp:
        * cuts/utils/testing/svcs/validation/TE_Score_App_Options.h:

          . Improved the options for the application.

        * cuts/utils/unite/Dataset_Result.cpp:
        * cuts/utils/unite/Unite_App.cpp:

          . Bug fix where the aspects were being applied when it
            should not be.

Fri Oct  9 21:56:22 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MPC/config/cuts_unite.mpb:

          . Added boost_base as a base project.

        * cuts/utils/testing/svcs/validation/TE_Score.mpc:
        * cuts/utils/testing/svcs/validation/TE_Score.cpp:
        * cuts/utils/testing/svcs/validation/TE_Score_App.h:
        * cuts/utils/testing/svcs/validation/TE_Score_App.inl:
        * cuts/utils/testing/svcs/validation/TE_Score_App.cpp:
        * cuts/utils/testing/svcs/validation/TE_Score_Evaluator.h:
        * cuts/utils/testing/svcs/validation/TE_Score_Evaluator.inl:
        * cuts/utils/testing/svcs/validation/TE_Score_Evaluator.cpp:
        * cuts/utils/unite/cuts-unite.h:
        * cuts/utils/unite/cuts-unite.inl:
        * cuts/utils/unite/cuts-unite.cpp:
        * cuts/utils/unite/unite.mpc:
        * etc/schemas/cuts-unite.xsd:

          . First implementation of TE Score.

        * default.features.tmpl:

          . Updated the feature template file.

Wed Oct  7 00:18:52 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * .:

          . Added default.features to this directory's ignore list.

Wed Oct  7 00:14:22 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/testing/svcs/logging/Testing_LoggingServerListener_i.cpp:
        * cuts/utils/testing/svcs/logging/Trace_Importer.cpp:
        * cuts/utils/testing/svcs/logging/Trace_Importer.mpc: